exports[`Navbar presentational when logged in homepage 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }>
    <Component
      logout={[Function]}
      pathname="/"
      session={
        Object {
          "data": Object {
            "client": "abcdef",
            "expiry": "123456",
            "token": "mnopqr",
            "uid": "ghijkl",
          },
          "isFetching": false,
        }
      }>
      <Menu>
        <div
          className="ui menu">
          <LeftMenu>
            <MenuMenu>
              <div
                className="menu">
                <MenuItem
                  activeOnlyWhenExact={true}
                  label="La FABrique du Loch"
                  to="/">
                  <Route
                    exact={true}
                    path="/">
                    <MenuItem
                      active={true}
                      as={[Function]}
                      to="/">
                      <Link
                        className="active item"
                        onClick={[Function]}
                        replace={false}
                        to="/">
                        <a
                          className="active item"
                          href="/"
                          onClick={[Function]}>
                          La FABrique du Loch
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
                <MenuItem
                  label="My Fablab"
                  to="/myfablab">
                  <Route
                    path="/myfablab">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/myfablab">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/myfablab">
                        <a
                          className="item"
                          href="/myfablab"
                          onClick={[Function]}>
                          My Fablab
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
              </div>
            </MenuMenu>
          </LeftMenu>
          <RightMenu>
            <MenuMenu
              position="right">
              <div
                className="right menu">
                <MenuItem
                  label="Me déconnecter"
                  onClick={[Function]}
                  to="/">
                  <Route
                    path="/">
                    <MenuItem
                      active={true}
                      as={[Function]}
                      onClick={[Function]}
                      to="/">
                      <Link
                        className="active item"
                        onClick={[Function]}
                        replace={false}
                        to="/">
                        <a
                          className="active item"
                          href="/"
                          onClick={[Function]}>
                          Me déconnecter
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
              </div>
            </MenuMenu>
          </RightMenu>
        </div>
      </Menu>
    </Component>
  </Router>
</BrowserRouter>
`;

exports[`Navbar presentational when not logged in homepage 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }>
    <Component
      logout={[Function]}
      pathname="/"
      session={
        Object {
          "data": null,
          "isFetching": false,
        }
      }>
      <Menu>
        <div
          className="ui menu">
          <LeftMenu>
            <MenuMenu>
              <div
                className="menu">
                <MenuItem
                  activeOnlyWhenExact={true}
                  label="La FABrique du Loch"
                  to="/">
                  <Route
                    exact={true}
                    path="/">
                    <MenuItem
                      active={true}
                      as={[Function]}
                      to="/">
                      <Link
                        className="active item"
                        onClick={[Function]}
                        replace={false}
                        to="/">
                        <a
                          className="active item"
                          href="/"
                          onClick={[Function]}>
                          La FABrique du Loch
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
                <MenuItem
                  label="My Fablab"
                  to="/myfablab">
                  <Route
                    path="/myfablab">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/myfablab">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/myfablab">
                        <a
                          className="item"
                          href="/myfablab"
                          onClick={[Function]}>
                          My Fablab
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
              </div>
            </MenuMenu>
          </LeftMenu>
          <RightMenu>
            <MenuMenu
              position="right">
              <div
                className="right menu">
                <MenuItem
                  label="Me connecter"
                  to="/session/login">
                  <Route
                    path="/session/login">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/session/login">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/session/login">
                        <a
                          className="item"
                          href="/session/login"
                          onClick={[Function]}>
                          Me connecter
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
                <MenuItem
                  label="M\'inscrire"
                  to="/session/signup">
                  <Route
                    path="/session/signup">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/session/signup">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/session/signup">
                        <a
                          className="item"
                          href="/session/signup"
                          onClick={[Function]}>
                          M\'inscrire
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
              </div>
            </MenuMenu>
          </RightMenu>
        </div>
      </Menu>
    </Component>
  </Router>
</BrowserRouter>
`;

exports[`Navbar presentational when not logged in login page 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }>
    <Component
      logout={[Function]}
      pathname="/account/login"
      session={
        Object {
          "data": null,
          "isFetching": false,
        }
      }>
      <Menu>
        <div
          className="ui menu">
          <LeftMenu>
            <MenuMenu>
              <div
                className="menu">
                <MenuItem
                  activeOnlyWhenExact={true}
                  label="La FABrique du Loch"
                  to="/">
                  <Route
                    exact={true}
                    path="/">
                    <MenuItem
                      active={true}
                      as={[Function]}
                      to="/">
                      <Link
                        className="active item"
                        onClick={[Function]}
                        replace={false}
                        to="/">
                        <a
                          className="active item"
                          href="/"
                          onClick={[Function]}>
                          La FABrique du Loch
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
                <MenuItem
                  label="My Fablab"
                  to="/myfablab">
                  <Route
                    path="/myfablab">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/myfablab">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/myfablab">
                        <a
                          className="item"
                          href="/myfablab"
                          onClick={[Function]}>
                          My Fablab
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
              </div>
            </MenuMenu>
          </LeftMenu>
          <RightMenu>
            <MenuMenu
              position="right">
              <div
                className="right menu">
                <MenuItem
                  label="Me connecter"
                  to="/session/login">
                  <Route
                    path="/session/login">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/session/login">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/session/login">
                        <a
                          className="item"
                          href="/session/login"
                          onClick={[Function]}>
                          Me connecter
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
                <MenuItem
                  label="M\'inscrire"
                  to="/session/signup">
                  <Route
                    path="/session/signup">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/session/signup">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/session/signup">
                        <a
                          className="item"
                          href="/session/signup"
                          onClick={[Function]}>
                          M\'inscrire
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
              </div>
            </MenuMenu>
          </RightMenu>
        </div>
      </Menu>
    </Component>
  </Router>
</BrowserRouter>
`;

exports[`Navbar presentational when not logged in signup page 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }>
    <Component
      logout={[Function]}
      pathname="/account/signup"
      session={
        Object {
          "data": null,
          "isFetching": false,
        }
      }>
      <Menu>
        <div
          className="ui menu">
          <LeftMenu>
            <MenuMenu>
              <div
                className="menu">
                <MenuItem
                  activeOnlyWhenExact={true}
                  label="La FABrique du Loch"
                  to="/">
                  <Route
                    exact={true}
                    path="/">
                    <MenuItem
                      active={true}
                      as={[Function]}
                      to="/">
                      <Link
                        className="active item"
                        onClick={[Function]}
                        replace={false}
                        to="/">
                        <a
                          className="active item"
                          href="/"
                          onClick={[Function]}>
                          La FABrique du Loch
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
                <MenuItem
                  label="My Fablab"
                  to="/myfablab">
                  <Route
                    path="/myfablab">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/myfablab">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/myfablab">
                        <a
                          className="item"
                          href="/myfablab"
                          onClick={[Function]}>
                          My Fablab
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
              </div>
            </MenuMenu>
          </LeftMenu>
          <RightMenu>
            <MenuMenu
              position="right">
              <div
                className="right menu">
                <MenuItem
                  label="Me connecter"
                  to="/session/login">
                  <Route
                    path="/session/login">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/session/login">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/session/login">
                        <a
                          className="item"
                          href="/session/login"
                          onClick={[Function]}>
                          Me connecter
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
                <MenuItem
                  label="M\'inscrire"
                  to="/session/signup">
                  <Route
                    path="/session/signup">
                    <MenuItem
                      active={null}
                      as={[Function]}
                      to="/session/signup">
                      <Link
                        className="item"
                        onClick={[Function]}
                        replace={false}
                        to="/session/signup">
                        <a
                          className="item"
                          href="/session/signup"
                          onClick={[Function]}>
                          M\'inscrire
                        </a>
                      </Link>
                    </MenuItem>
                  </Route>
                </MenuItem>
              </div>
            </MenuMenu>
          </RightMenu>
        </div>
      </Menu>
    </Component>
  </Router>
</BrowserRouter>
`;
